fix: added header/nav/footer place-holders
- temp default for header/footer

--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset='utf-8'>
-    <link href="css/screen.css" rel="stylesheet" type="text/css">
-    
-  </head>
-  <body>
-    <div id="app"></div>
-    <script src="js/compiled/app.js"></script>
-    <script>insight.core.init();</script>
-  </body>
+    <head>
+        <meta charset='utf-8'>
+        <link href="css/screen.css" rel="stylesheet" type="text/css">
+    </head>
+    <body>
+        <header>Insight</header>
+        <div id="nav"></div>
+        <div id="app"></div>
+        <footer>Developed by Gryff!n Software Development LLP. All rights reserved.</footer>
+        <script src="js/compiled/app.js"></script>
+        <script>insight.core.init();</script>
+    </body>
 </html>
