--- a/resources/public/index.html
+++ b/resources/public/index.html
@@ -1,18 +1,15 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset='utf-8'>
-    <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="vendor/css/material-design-iconic-font.min.css">
-    <link href="http://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Roboto+Condensed:400,300" rel="stylesheet" type="text/css">
-    <link href="css/screen.css" rel="stylesheet" type="text/css">
-  </head>
-  <body>
-    <header>Insight</header>
-    <div id="app"></div>
-    <footer>Developed by Gryff!n Software Development LLP. All rights reserved.</footer>
-    <script src="js/compiled/app.js"></script>
-    <script>insight.core.init();</script>
+    <head>
+        <meta charset='utf-8'>
+        <link type="text/css" rel="stylesheet" href="css/materialize/css/materialize.min.css" />
+        <link rel="stylesheet" type="text/css" href="css/screen.css" />
+    </head>
+    <body>
+        <div id="app"></div>
+        <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="js/materialize/js/materialize.min.js"></script>
+        <script src="js/compiled/app.js"></script>
+        <script>insight.core.init();</script>
   </body>
 </html>
